syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "ClientProto";

package GrupoB.gRPCService.ClientProto;

service Client {
    rpc ping (EmptyMessage) returns (BooleanMessage) {}
    rpc store (StoreData) returns (EmptyMessage) {}
    rpc findNode (NodeInfo) returns (Nodes) {}
    rpc getBlockchain (EmptyMessage) returns (Blocks) {}
}

message EmptyMessage {
}

message BooleanMessage {
    bool result = 1;
}

message Blocks {
    repeated BlockData block = 1;
}

message StoreData {
    BlockData block = 1;
    Nodes nodes = 2;
    string cash = 3;
}

message BlockData {
    string merkleRoot = 1;
    repeated string transaction = 2;
}

message NodeID {
    string nodeID = 1;
}

message Nodes {
    repeated NodeInfo nodes = 1;
}

message NodeInfo {
    string address = 1;
    int32 port = 2;
    string nodeID = 3;
}